unit_tests/preprocessor/errors/division-zero.correct
preprocessor/errors/division-zero:1: error: division by zero
